<resources>
    <string name="app_name">EAD_Project-FrontEnd</string>
    <string name="page_title">%s page is selected</string>
    <!--    Login Strings-->
    <string name="upper_logo">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgotPassword">FORGOT PASSWORD?</string>
    <string name="orSeparate">OR</string>
    <string name="googleIcon">google icon</string>
    <string name="fbIcon">facebook icon</string>
    <string name="noAccount">New StationOwner? Create an Account</string>
    <!--    Registration Strings-->
    <string name="userName">Full Name</string>
    <string name="userNIC">NIC</string>
    <string name="userEmail">Email</string>
    <string name="userVehicleType">Vehicle Type</string>
    <string name="userFuelType">Fuel Type</string>
    <!--    Fuel station  card Strings-->
    <string name="fuelStopName">Fuel stop Name</string>
    <string name="location">location</string>
    <string name="numberOfPerson">number</string>


</resources>