<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stationOwnerLogin.StationOwnerLogin">

        <View
            android:id="@+id/upperView_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="#750000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/upperDesign_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:background="@drawable/ic_wave_design"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperView_AdminLogin" />

        <ImageView
            android:id="@+id/upperLogo_AdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/upper_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/topText_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="68dp"
            android:text="Already Have an Account?"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/upperLogo_AdminLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/upperView_AdminLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_Email_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperDesign_AdminLogin" />

        <EditText
            android:id="@+id/input_Password_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_Email_AdminLogin" />

        <Button
            android:id="@+id/btn_Login_AdminLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_bg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_Password_AdminLogin" />

<!--        <TextView-->
<!--            android:id="@+id/forgot_Password_AdminLogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:text="@string/forgotPassword"-->
<!--            android:textColor="#750000"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btn_Login_AdminLogin" />-->


        <TextView
            android:id="@+id/Or_Separate_AdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/orSeparate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login_AdminLogin" />

<!--        <LinearLayout-->
<!--            android:id="@+id/linear_Layout_AdminLogin"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/Or_Separate_AdminLogin">-->

<!--            <ImageView-->
<!--                android:id="@+id/google_Login_AdminLogin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="@string/googleIcon"-->
<!--                app:srcCompat="@drawable/google" />-->

<!--            <ImageView-->
<!--                android:id="@+id/facebook_Login_AdminLogin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="@string/fbIcon"-->
<!--                app:srcCompat="@drawable/facebook" />-->
<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/RegisterNow_AdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/noAccount"
            android:textColor="#750000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Or_Separate_AdminLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>